feat: 统一应用/GC/堆转储日志到 /var/log/easyaccount-agent
- logback 写入 /var/log/easyaccount-agent/easyaccount-agent.log
- Docker entrypoint 配置 GC 日志与 OOM 堆转储同目录
- compose bind mount 宿主机日志目录，部署脚本确保目录存在

Co-authored-by: rockyshen <rockyshen@users.noreply.github.com>